feat: added transfer routes and swagger documentation
