# src/controllers/transferController.ts
@@ -1,6 +1,7 @@
 import { Request, Response } from 'express';
 import { TransferDao } from '../dao/transferDao';
 import TransferService from '../services/transferService'; // Update the path as needed
+import { ObjectId } from 'mongodb';
 
 const createTransfer = async (req: Request, res: Response) => {
   const { amount, currency, sourceAccount, destinationAccount } = req.body;
@@ -40,4 +41,54 @@ const getAllTransfers = async (req: Request, res: Response) => {
   }
 };
 
-export { createTransfer, getAllTransfers };
+const patchTransfer = async (req: Request, res: Response) => {
+  const transactionIdString: string = req.params.id;
+  const status = req.body.status.toLowerCase();
+
+  if (status !== 'approved' && status !== 'denied') {
+    return res.status(400).json({
+      message: 'error',
+      error: 'Invalid status. Status must be either "approved" or "denied".'
+    });
+  }
+
+  try {
+    const transactionId = new ObjectId(transactionIdString);
+    const transferDao = new TransferDao(req.db);
+    const transferService = new TransferService(transferDao);
+    
+    const transfer = await transferService.updateTransfer(transactionId, status);
+    res.status(200).json({
+      message: 'success',
+      data: transfer
+    });
+  } catch (error: any) {
+    res.status(500).json({
+      message: 'error',
+      error: error.message
+    });
+  }
+};
+
+const deleteTransfer = async (req: Request, res: Response) => {
+  const transactionIdString: string = req.params.id;
+
+  try {
+    const transactionId = new ObjectId(transactionIdString);
+    const transferDao = new TransferDao(req.db);
+    const transferService = new TransferService(transferDao);
+    
+    const transfer = await transferService.deleteTransfer(transactionId);
+    res.status(200).json({
+      message: 'success',
+      data: transfer
+    });
+  } catch (error: any) {
+    res.status(500).json({
+      message: 'error',
+      error: error.message
+    });
+  }
+};
+
+export { createTransfer, getAllTransfers, patchTransfer };
